<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="top"
    android:padding="16dp"
    tools:context=".RegistrarseActivity">

    <TextView
        android:id="@+id/textViewTituloRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewTituloRegistrarse"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtRegistrarseNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Nombre:"
        android:ems="10"
        android:hint="@string/edtRegistrarseNombre"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize"
        android:layout_marginTop="64dp"/>

    <EditText
        android:id="@+id/edtRegistrarseCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Correo:"
        android:ems="10"
        android:hint="@string/edtRegistrarseCorreo"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/edtRegistrarsePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Password:"
        android:ems="10"
        android:hint="@string/edtRegistrarsePassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/edtRegistrarseConfirmarPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Confirmar Password:"
        android:ems="10"
        android:hint="@string/edtRegistrarseConfirmarPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegistrarse"
        tools:ignore="VisualLintButtonSize"
        android:layout_marginTop="48dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="¿Ya tienes cuenta? "
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/btnRegistrarseAcceder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:clickable="true"
            android:text="@string/strRegistrarseAcceder"
            android:textAlignment="textStart"
            android:textColor="#03A9F4"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>