<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AccederActivity">

    <TextView
        android:id="@+id/tvAccederTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvAccederTitulo"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtAccederCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Correo:"
        android:ems="10"
        android:hint="@string/edtAccederCorreo"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize"
        android:layout_marginTop="64dp"/>

    <EditText
        android:id="@+id/edtAccederPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Password:"
        android:ems="10"
        android:hint="@string/edtAccederPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/btnAccederRestablecerContraseña"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:text="@string/strAccederRestablecerContraseña"
        android:textAlignment="center"
        android:textColor="#03A9F4"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnAcceder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAcceder"
        android:layout_marginTop="48dp"
        tools:ignore="VisualLintButtonSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="¿Aún no tienes cuenta? "
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/btnAccederRegistrarse"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:clickable="true"
            android:text="@string/strAccederCrearCuenta"
            android:textAlignment="textStart"
            android:textColor="#03A9F4"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>